Nog meer feedback verwerkt

--- a/references.bib
+++ b/references.bib
@@ -231,7 +231,7 @@
 @article{zheng2018sift,
 	title={{SIFT} meets {CNN}: A decade survey of instance retrieval},
 	author={Zheng, Liang and Yang, Yi and Tian, Qi},
-	journal={IEEE transactions on pattern analysis and machine intelligence},
+	journal={IEEE transactions on {P}attern {A}nalysis and {M}achine {I}ntelligence},
 	volume={40},
 	number={5},
 	pages={1224--1244},
@@ -262,7 +262,7 @@
 @inproceedings{sivic2003video,
 	title={Video Google: A text retrieval approach to object matching in videos},
 	author={Sivic, Josef and Zisserman, Andrew},
-	booktitle={null},
+	booktitle={IEEE International Conference on Computer Vision},
 	pages={1470},
 	year={2003},
 	organization={IEEE}
@@ -300,7 +300,7 @@
 @article{jegou2012aggregating,
 	title={Aggregating local image descriptors into compact codes},
 	author={Jegou, Herve and Perronnin, Florent and Douze, Matthijs and S{\'a}nchez, Jorge and Perez, Patrick and Schmid, Cordelia},
-	journal={IEEE transactions on pattern analysis and machine intelligence},
+	journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
 	volume={34},
 	number={9},
 	pages={1704--1716},
@@ -353,7 +353,7 @@
 }
 
 @article{tolias2015particular,
-	title={Particular object retrieval with integral max-pooling of CNN activations},
+	title={Particular object retrieval with integral max-pooling of {CNN} activations},
 	author={Tolias, Giorgos and Sicre, Ronan and J{\'e}gou, Herv{\'e}},
 	journal={arXiv preprint arXiv:1511.05879},
 	year={2015}
@@ -389,7 +389,7 @@
 @article{manjunath1996texture,
 	title={Texture features for browsing and retrieval of image data},
 	author={Manjunath, Bangalore S and Ma, Wei-Ying},
-	journal={IEEE Transactions on pattern analysis and machine intelligence},
+	journal={IEEE transactions on {P}attern {A}nalysis and {M}achine {I}ntelligence},
 	volume={18},
 	number={8},
 	pages={837--842},
